tests/syntax_errors/missing_rparen.draw
LINE(50, 50, 300, 100 COLOR red WIDTH 2;
